grammar.js
    source_file: $ => repeat(
      choice(
        $.psql_statement,
        seq($._statement, ";")
      ),
    ),

    _statement: $ => choice(
      $.psql_statement,
      $.create_function_statement,
      $.drop_function_statement,
      $.create_table_statement,
      $.create_schema_statement,
      $.create_type_statement,
      $.select_statement,
      $.insert_statement,
      $.delete_statement,
      $.update_statement,
      $.grant_statement,
      $.create_trigger_statement,
      $.create_sequence_statement,
      $.create_index_statement,
      $.alter_table_statement,
      $.do_block,
    ),

    drop_function_statement: $ => seq(
      kw("drop"), kw("function"),
      commaSep1($.drop_function_item),
      optional(choice(kw("cascade"), kw("restrict")))
    ),

    drop_function_item: $ => seq(
      optional($.if_exists),
      $.identifier,
      optional(
        seq(
          "(",
          commaSep(
            choice($.var_declaration, $._type,)
          ),
          ")",
    ))),

    create_type_statement: $ => seq(
      kw("create"), kw("type"), $.identifier, optional(choice(
        seq(kw("as"), kw("enum"), "(", commaSep1($.string), ")"),
        seq(kw("as"), "(", commaSep1($.var_declaration), ")"),
      ))
    ),

    // TODO(chrde): values
    create_schema_statement: $ => seq(
      kw("create"), kw("schema"), optional($.if_not_exists), choice(
        seq($.identifier, optional($.schema_role)),
        $.schema_role,
      ),
    ),
        
    schema_role: $ => seq(
      kw("authorization"),
      choice($.identifier, kw("current_user"), kw("session_user")),
    ),

    create_sequence_statement: $ => seq(
      kw("create"), optional($.temporary), kw("sequence"), optional($.if_not_exists),
      $.identifier,
      repeat(choice(
        $.as,
        $.sequence_increment,
        $.sequence_min,
        $.sequence_max,
        $.sequence_start,
        $.sequence_cache,
        $.sequence_cycle,
        $.sequence_owned,
      )),
    ),

    sequence_increment: $ => seq(kw("increment"), optional(kw("by")), $.number),
    sequence_min: $ => choice(
      seq(kw("no"), kw("minvalue")),
      seq(kw("minvalue"), $.number,),
    ),
    sequence_max: $ => choice(
      seq(kw("no"), kw("maxvalue")),
      seq(kw("maxvalue"), $.number,),
    ),
    sequence_start: $ => seq(kw("start"), optional(kw("with")), $.number),
    sequence_cache: $ => seq(kw("cache"), $.number),
    sequence_cycle: $ => seq(optional(kw("no")), kw("cycle")),
    sequence_owned: $ => seq(
      kw("owned"), kw("by"),
      choice(
        kw("none"),
        $.identifier
      ),
    ),

    _plpgsql_statement: $ => seq(
      choice(
        $._statement,
        $.assign_statement,
        $.get_diagnostics_statement,
        $.return_statement,
        $.raise_statement,
        $.if_statement,
        $.for_statement,
        $.execute_statement,
        $.perform_statement,
      ),
      ";",
    ),

    create_function_statement: $ => seq(
      kw("create"), optional($.or_replace), kw("function"),
      $.function_signature,
      $.function_return,
      kw("as"), choice(
        $.block,
        $.string,
      ),
      kw("language"), choice($.identifier, $.string),
      optional($.function_volatility),
      optional($.function_run_as),
    ),

    function_run_as: $ => seq(
      kw("security"),
      choice(kw("invoker"), kw("definer"))
    ),

    function_return: $ => seq(
      kw("returns"),
      choice(
        $.identifier,
        $.return_setof,
        $.return_table,
      ),
    ),
    return_setof: $ => seq(kw("setof"), $.identifier),
    return_table: $ => seq(kw("table"), "(", commaSep1($.var_declaration), ")"),

    function_volatility: $ => choice(
      kw("immutable"),
      kw("stable"),
      kw("volatile"),
    ),

    block: $ => seq(
      $.dollar_quote,
      repeat($.declarations),
      $.body,
      $.dollar_quote,
    ),

    body: $ => seq(
      kw("begin"),
      repeat($._plpgsql_statement),
      kw("end"),
      optional(";"),
    ),

    dollar_quote: $ => seq("$", optional($.identifier), "$"),

    function_signature: $ => seq(
      $.identifier,
      $.function_parameters,
    ),

    function_parameters: $ => seq(
      "(",
      commaSep($.var_declaration),
      optional(seq(kw("default"), field("default_value", ($._value_expression)))),
      ")"
    ),

    var_declaration: $ => seq(
      field("name", $.identifier),
      field("type", $._type),
    ),

    or_replace: $ => seq(kw("or"), kw("replace")),
    temporary: $ => choice(kw("temp"), kw("temporary")),
    if_not_exists: $ => seq(kw("if"), kw("not"), kw("exists")),
    if_exists: $ => seq(kw("if"), kw("exists")),
    as: $ => seq(kw("as"), $.identifier),

    _type: $ => seq(
      choice($.predefined_types, $.identifier),
      optional(choice(
        repeat1(seq("[", "]")),
        kw("%rowtype"),
        kw("%type")))
    ),

// predefined_type:
//   | BIGINT { BigInt }
//   | BIT VARYING? l = type_length? { BitVarying(l) }
//   | BOOLEAN { Boolean }
//   | CHAR VARYING? l = type_length? { Char(l) }
//   | CHARACTER VARYING? l = type_length? { Char(l) }
//   | DEC p = precision_param? { Dec(p) }
//   | DECIMAL p = precision_param? { Decimal(p) }
//   | DOUBLE PRECISION { Double }
//   | FLOAT p = precision_param? { Float(p) }
//   | INT { Int }
//   | INTEGER { Integer }
//   | INTERVAL interval = interval_field? l = type_length? { Interval(interval, l) }
//   | NCHAR VARYING? l = type_length? { Nchar(l) }
//   | NUMERIC p = precision_param? { Numeric(p) }
//   | REAL { Real }
//   | SMALLINT { SmallInt }
//   | TEXT { Text }
//   (* | TIME l = type_length? (1* NOTE(chrde): what here? *1) *)
//   | TIME l = type_length? WITH TIME ZONE { TimeTz(l) }
//   | TIME l = type_length? WITHOUT TIME ZONE { Time(l) }
//   (* | TIMESTAMP l = type_length? (1* NOTE(chrde): what here? *1) *)
//   | TIMESTAMP l = type_length? WITH TIME ZONE { TimestampTz(l) }
//   | TIMESTAMPTZ l = type_length? { TimestampTz(l) }
//   | TIMESTAMP l = type_length? WITHOUT TIME ZONE { Timestamp(l) }
//   | VARCHAR l = type_length? { VarChar(l) }
//   (* | schema_qualified_name_nontype (LEFT_PAREN vex (COMMA vex)* RIGHT_PAREN)? *)
    // TODO(chrde): moar types!!
    string: $ => seq(
      "'",
      repeat(choice(
        prec(1, /''/),
        prec(2, /[^']/),
      )),
       "'",
    ),

    // NOTE(chrde): taken from https://github.com/tree-sitter/tree-sitter-javascript/blob/1ddbf1588c353edab37791cdcc9f17e56fb4ea73/grammar.js#L899
    _value_expression: $ => choice(
      $.number,
      $.dollar_quote_string,
      $.string,
      $.true,
      $.false,
      $.null,
      $.star,
      seq("(", $.select_statement, ")"),
      seq("(", commaSep1($._value_expression), ")"),
      $.function_call,
      $.array_constructor,
      $.op_expression,
      $.time_expression,
      // TODO(chrde): this one feels a bit hacky? perhaps move to identifier regexp
      seq($.identifier, ".", $.star),
      $.identifier,
    ),

    number: $ => /-?\d+/,
    identifier: $ => $._identifier,
    _identifier: $ => /[a-zA-Z0-9_]+(\.?[a-zA-Z0-9_]+)*/,
    //                                ^
    //                                |- we dont want to match consecutive dots, e.g: 1..2 consists of 3 tokens
  }
});
