corpus/create_schema_statement.txt
================================================================================
basic
================================================================================
create schema foo;
--------------------------------------------------------------------------------

(source_file
  (create_schema_statement
    (identifier)))

================================================================================
for user
================================================================================
create schema authorization joe;
--------------------------------------------------------------------------------

(source_file
  (create_schema_statement
    (schema_role
      (identifier))))

================================================================================
for current_user
================================================================================
create schema authorization current_user;
--------------------------------------------------------------------------------

(source_file
  (create_schema_statement
    (schema_role)))

================================================================================
for session_user
================================================================================
create schema authorization session_user;
--------------------------------------------------------------------------------

(source_file
  (create_schema_statement
    (schema_role)))

================================================================================
with name, for user
================================================================================
create schema foo authorization joe;
--------------------------------------------------------------------------------

(source_file
  (create_schema_statement
    (identifier)
    (schema_role
      (identifier))))

================================================================================
if not exists
================================================================================
create schema if not exists foo authorization joe;
--------------------------------------------------------------------------------

(source_file
  (create_schema_statement
    (if_not_exists)
    (identifier)
    (schema_role
      (identifier))))

================================================================================
if not exists with name
================================================================================
create schema if not exists authorization joe;
--------------------------------------------------------------------------------

(source_file
  (create_schema_statement
    (if_not_exists)
    (schema_role
      (identifier))))
