corpus/create_sequence_statement.txt
================================================================================
basic
================================================================================
create sequence foo;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)))

================================================================================
if not exists
================================================================================
create sequence if not exists foo;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (if_not_exists)
    (identifier)))

================================================================================
temp
================================================================================
create temp sequence foo;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (temporary)
    (identifier)))

================================================================================
temporary
================================================================================
create temporary sequence foo;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (temporary)
    (identifier)))

================================================================================
as
================================================================================
create sequence foo as smallint;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (as
      (identifier))))

================================================================================
increment
================================================================================
create sequence foo increment 5;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_increment
      (number))))

================================================================================
increment by
================================================================================
create sequence foo increment by 5;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_increment
      (number))))

================================================================================
minvalue
================================================================================
create sequence foo minvalue 5;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_min
      (number))))

================================================================================
no minvalue
================================================================================
create sequence foo no minvalue;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_min)))

================================================================================
max value
================================================================================
create sequence foo maxvalue 5;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_max
      (number))))

================================================================================
no max value
================================================================================
create sequence foo no maxvalue;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_max)))

================================================================================
start
================================================================================
create sequence foo start 5;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_start
      (number))))

================================================================================
start with
================================================================================
create sequence foo start with 5;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_start
      (number))))

================================================================================
cache
================================================================================
create sequence foo cache 4;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_cache
      (number))))

================================================================================
no cycle
================================================================================
create sequence foo no cycle;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_cycle)))

================================================================================
cycle
================================================================================
create sequence foo cycle;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_cycle)))

================================================================================
owned by
================================================================================
create sequence foo owned by foo.bar;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_owned
      (identifier))))

================================================================================
owned by none
================================================================================
create sequence foo owned by none;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (identifier)
    (sequence_owned)))

================================================================================
full syntax
================================================================================
create temp sequence if not exists foo
as bigint increment -5
minvalue 5 no maxvalue
start with 3 cache 2 no cycle
owned by none;
--------------------------------------------------------------------------------

(source_file
  (create_sequence_statement
    (temporary)
    (if_not_exists)
    (identifier)
    (as
      (identifier))
    (sequence_increment
      (number))
    (sequence_min
      (number))
    (sequence_max)
    (sequence_start
      (number))
    (sequence_cache
      (number))
    (sequence_cycle)
    (sequence_owned)))
