corpus/create_type_statement.txt
================================================================================
empty
================================================================================
create type foo;
--------------------------------------------------------------------------------

(source_file
  (create_type_statement
    (identifier)))

================================================================================
with fields
================================================================================
create type foo as ( one text, two bigint[] );
--------------------------------------------------------------------------------

(source_file
  (create_type_statement
    (identifier)
    (var_declaration
      (identifier)
      (identifier))
    (var_declaration
      (identifier)
      (identifier))))

================================================================================
enum
================================================================================
create type foo.bar as enum ('one', 'two');
--------------------------------------------------------------------------------

(source_file
  (create_type_statement
    (identifier)
    (string)
    (string)))
